X2: Override baseband version from modem firmware
 * realme (and oppo) snapdragon devices have a generic
   baseband version of "Q_V1_P14" so instead of that,
   fetch the real baseband version from modem firmware
   and override it

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -57,6 +57,15 @@ service prop-adap-main-gsi /vendor/bin/self-init gsimain
     override
     disabled
 
+on property:gsm.version.baseband=*
+    start set_baseband
+
+service set_baseband /product/bin/init.set_baseband.sh
+    class late_start
+    user system
+    group system
+    oneshot
+
 on property:sys.boot_completed=1
     # Runtime fs tuning
     write /sys/block/sda/queue/nr_requests 128
