X2: rootdir: Override disable self-init GSI services  * this service runs from vendor in non-stock roms and enables gsi    mode in order to pass cts/vts, but also has the side effect of    breaking aux cams and more
 * since we are not running any cts or vts tests, disable these
   services to retain stock behavior of camera hal and other stuff

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -47,6 +47,22 @@ on post-fs-data
     #Hack until we build the vendor
     mount none /vendor/lost+found /vendor/overlay bind
 
+service prop-adap-core-gsi /vendor/bin/self-init gsicore
+    class core
+    user root
+    group root system radio
+    oneshot
+    override
+    disabled
+
+service prop-adap-main-gsi /vendor/bin/self-init gsimain
+    class main
+    user root
+    group root system radio
+    oneshot
+    override
+    disabled
+
 on boot
     # selinux nodes, hide permissive state
     chmod 0640 /sys/fs/selinux/enforce
